test: add tests for untested group feature methods